--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -1,4 +1,9 @@
-<mat-toolbar>CONTENT</mat-toolbar>
+<ul class="breadcrumb">
+  <li>
+    <a (click)="navigateToHome()">Home</a>/content
+  </li>
+  <li>Event</li>
+</ul>
 <div class="row">
   <div class="col-md-4">
     <mat-list>
