changes for class details

--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -1,8 +1,8 @@
 <ul class="breadcrumb">
   <li>
-    <a (click)="navigateToHome()">Home</a>/content
+    <a (click)="navigateToHome()">HOME</a>/
   </li>
-  <li>Event</li>
+  <li>CONTENT</li>
 </ul>
 <div class="row">
   <div class="col-md-4">
