--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -1,2 +1,7 @@
-<mat-toolbar></mat-toolbar>
+<nav class="navbar navbar-inverse">
+        <ul class="nav navbar-nav">
+       
+        </ul>
+      
+      </nav>
 <router-outlet></router-outlet>
