--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -14,9 +14,15 @@
               <h4 class="media-heading">
                 <strong>{{user.firstname}} {{user.lastname}}</strong>
               </h4>
-              <P> <strong>{{user.email}}</strong></P>
-              <p> <strong>{{user.mobileno}}</strong></p>
-              <p>ROLE : <strong>{{user.role}}</strong></p>
+              <P>
+                <strong>{{user.email}}</strong>
+              </P>
+              <p>
+                <strong>{{user.mobileno}}</strong>
+              </p>
+              <p>ROLE :
+                <strong>{{user.role}}</strong>
+              </p>
             </div>
           </div>
         </div>
@@ -39,9 +45,12 @@
           </ul>
         </mat-expansion-panel>
       </div>
-      <div class="col-md-9">
+
+      <div class="col-md-9" *ngIf="enableClass">
         <div class="book-tables wh-bg history">
-          <h4 class="media-heading"><strong>Details About Class </strong></h4>
+          <h4 class="media-heading">
+            <strong>Details About Classes</strong>
+          </h4>
           <div class="media">
             <div class="pull-right">
               <a class="action-link" (click)="addClassDetails()">
@@ -50,44 +59,42 @@
               </a>
             </div>
             <div class="media-body">
-              <div class="order-history">
+              <div class="order-history" *ngFor="let class of classList">
                 <div class="history-head">
                   <span>{{class.displayName}}</span>
                   <div class="pull-right hostOrderLink">
-                    <a (click)="confirmOpenDialog()">WORK-SPACE</a>
+                    <a (click)="viewYourWorkSpace(class)">WORK-SPACE</a>
                   </div>
                 </div>
                 <div class="history-body">
                   <div class="media-left">
-                    <div class="media-left">
-                      <span> Subject List , Current Subject </span>
-                    </div>
+                    <span>{{class.description}}</span>
+                  </div>
+                  <div class="media-right">
+                    <img class="person-card-avatar bigPicture" src="{{class.icon}}">
+                    <a id="photoSelector" mat-icon-button (click)='onChangeImageUpload()'>
+                      <mat-icon>photo_camera</mat-icon> Edit image
+                    </a>
                   </div>
                 </div>
-              </div>
-
-
-              <div class="order-history" *ngFor="let subject of subjectList">
-                <div class="history-head">
-                  <span>{{subject.displayName}}</span>
-                  <div class="pull-right hostOrderLink">
-                    <a (click)="confirmOpenDialog(hostHistory)">WORK-SPACE</a>
+                <div class="history-foot">
+                  <div class="pull-right">
+                    <a class="action-link" (click)="editClassDetails(class)">
+                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                      <span class="txt">EDIT</span>
+                    </a>
+                    <a class="action-link" (click)="deleteClassDetails(class)">
+                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                      <span class="txt">DELETE</span>
+                    </a>
                   </div>
-                </div>
-                <div class="history-body">
-                  <div class="media-left">
-                    <div class="media-left">
-                      <span> Subject List , Current Subject </span>
-                    </div>
-                  </div>
-                  <div class="media-body"></div>
 
                 </div>
-                <div class="history-foot"></div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
     </div>
   </div>
