--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.scss
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.scss
@@ -572,4 +572,11 @@
 .action-link .txt {
   padding-left: 5px;
 }
-
+.example-full-width {
+  width: 100%;
+  }
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
