--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -29,16 +29,13 @@
 
         <mat-expansion-panel *ngFor="let class of classList">
           <mat-expansion-panel-header>
-            <a (click)="showClassSubjectDetails(class)">
-              <mat-panel-title>
-                <i class="material-icons">folder</i>
-                {{class.displayName}}
-              </mat-panel-title>
+            <a (click)="showClassSubjectList(class)">
+              <mat-panel-title> <i class="material-icons">folder</i> {{class.displayName}}</mat-panel-title>
             </a>
           </mat-expansion-panel-header>
           <ul class="listItems">
-            <li *ngFor="let subj of class.list">
-              <a (click)="showSubjectDetails(subj,class)">
+            <li *ngFor="let subj of classSubjectList">
+              <a (click)="showChapterList(subj,class)">
                 {{subj.displayName}}
               </a>
             </li>
@@ -75,7 +72,7 @@
                   <div class="pull-right">
                     <a class="action-link" (click)="viewSubjectList(class)">
                       <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">Subjects</span>
+                      <span class="txt">subjects</span>
                     </a>
                     <a class="action-link" (click)="editClassDetails(class)">
                       <span class="glyphicon glyphicon-plus-sign green-icon"></span>
