--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -44,49 +44,70 @@
       </div>
 
       <div class="col-md-9">
-        <div class="book-tables wh-bg history">
-          <h4 class="media-heading">
-            <strong>Details About Classes</strong>
-          </h4>
-          <div class="media">
-            <div class="pull-right">
+        <div class="content">
+          <div class="book-tables wh-bg history">
+            <h4 class="media-heading">
+              <strong>Classes List</strong>
+            </h4>
+
+            <div class="pull-right right-btn">
               <a class="action-link" (click)="addClassDetails()">
                 <span class="glyphicon glyphicon-plus-sign green-icon"></span>
                 <span class="txt">Add Class</span>
               </a>
             </div>
-            <div class="media-body">
-              <div class="order-history" *ngFor="let class of classList">
-                <div class="history-head">
-                  <span>{{class.displayName}}</span>
-                  <!--div class="pull-right hostOrderLink">
-                    <a (click)="viewYourWorkSpace(class)">WORK-SPACE</a>
-                  </div-->
-                </div>
-                <div class="history-body">
-                  <div class="media-left">
-                    <span>{{class.description}}</span>
-                  </div>
-                </div>
-                <div class="history-foot">
-                  <div class="pull-right">
-                    <a class="action-link" (click)="viewSubjectList(class)">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">subjects</span>
-                    </a>
-                    <a class="action-link" (click)="editClassDetails(class)">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">EDIT</span>
-                    </a>
-                    <a class="action-link" (click)="deleteClassDetails(class)">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">DELETE</span>
-                    </a>
-                  </div>
 
+            <div class="row wh-bg margin-padding">
+              <div class="col-md-12">
+                <div class="search-box pull-right">
+                  <input class="search-input" placeholder="Search by class name , Subject Name">
+                  <i class="material-icons">search</i>
+                  <button class="cancelBtn" mat-raised-button>CANCEL</button>
                 </div>
               </div>
             </div>
+            <div class="row">
+            <div class="col-md-6" *ngFor="let class of classList">
+              <div class="media-body">
+                <div class="order-history">
+                  <div class="history-head">
+                    <span>{{class.displayName}}</span>
+                    <a class="action-link pull-right" (click)="viewSubjectList(class)">
+                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                      <span class="txt">View Subjects</span>
+                    </a>
+                  </div>
+                  <div class="history-body">
+                    <div class="media-left">
+                      <img class="person-card-avatar bigPicture" src="{{class.icon?class.icon:'assets/images/class.jpg'}}">
+                      <a id="photoSelector" mat-icon-button (click)='onChangeImage(class)'>
+                        <mat-icon>photo_camera</mat-icon> Edit image
+                      </a>
+                    </div>
+                    <div class="media-left">
+                      <span>{{class.description}}</span>
+                    </div>
+                  </div>
+                  <div class="history-foot">
+                    <div class="action-btns">
+                      <div class="pull-right">
+                        <a class="action-link" (click)="editClassDetails(class)">
+                          <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                          <span class="txt">EDIT</span>
+                        </a>
+                        <a class="action-link" (click)="deleteClassDetails(class)">
+                          <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                          <span class="txt">DELETE</span>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+              </div>
+
           </div>
         </div>
       </div>
