--- a/WEB/src/app/home/content-mgmnt/content-subject/content-chapter/content-chapter.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-subject/content-chapter/content-chapter.component.html
@@ -29,7 +29,7 @@
 
         <mat-expansion-panel *ngFor="let class of classList">
           <mat-expansion-panel-header>
-            <a (click)="showClassSubjectList(class)">
+            <a (click)="viewSubjectList(class)">
               <mat-panel-title>
                 <i class="material-icons">folder</i>
                 {{class.displayName}}
@@ -38,7 +38,7 @@
           </mat-expansion-panel-header>
           <ul class="listItems">
             <li *ngFor="let subj of subjectList">
-              <a (click)="showChapterList(subj,class)">
+              <a (click)="viewChapterList(subj)">
                  {{subj.displayName}}
               </a>
             </li>
@@ -50,11 +50,12 @@
         <div class="media-body">
           <div class="order-history">
             <div class="history-head">
-              <span>{{classDetail.displayName}}</span>
+              <span>{{subjectDetail.displayName}}</span>
             </div>
             <div class="history-body">
               <div class="media-left">
-                <span>{{classDetail.description}}</span>
+                  <img class="person-card-avatar bigPicture" src="{{subjectDetail.icon?subjectDetail.icon:'assets/images/class.jpg'}}">
+                <span>{{subjectDetail.description}}</span>
               </div>
             </div>
           </div>
@@ -80,6 +81,12 @@
                     </div-->
                 </div>
                 <div class="history-body">
+                    <div class="media-left">
+                        <img class="person-card-avatar bigPicture" src="{{chapter.icon?chapter.icon:'assets/images/class.jpg'}}">
+                        <a id="photoSelector" mat-icon-button (click)='onChangeImage(chapter)'>
+                          <mat-icon>photo_camera</mat-icon> Edit image
+                        </a>
+                      </div>
                   <div class="media-left">
                     <span>{{chapter.description}}</span>
                   </div>
