--- a/WEB/src/app/home/content-mgmnt/content-subject/subject-setup-dialog.html
+++ b/WEB/src/app/home/content-mgmnt/content-subject/subject-setup-dialog.html
@@ -14,7 +14,7 @@
             <textarea matInput placeholder="Description" [(ngModel)]="subjectSetup.description" name="description" required></textarea>
         </mat-form-field>
         <div mat-dialog-actions class="host-table-header">
-            <button id="updateBtn" mat-raised-button color="primary" (click)="saveClassChange()">SAVE</button>
+            <button id="updateBtn" mat-raised-button color="primary" (click)="saveClassChange()">{{operationType}}</button>
             <div class="divider"></div>
             <button class="noThanksBtn" mat-raised-button (click)="onNoClick()">NO Thanks</button>
         </div>
